<resources>
    <string name="app_name">A3 bitf17a545 </string>
    <string name="calculator">Calculator</string>
    <string name="quiz">My Quiz</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="assign">Welcome Page</string>
    <string name="c">C</string>
    <string name="equal">=</string>
    <string name="_00">00</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="multiply">×</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="div">÷</string>
    <string name="mod">%</string>
    <string name="del">Del</string>
    <string name="start">Start</string>
    <string name="insturctions_this_quiz_contains_10_mcsq_s_you_have_to_attempt_these_you_can_finish_at_any_time_click_on_quot_next_quot_button_to_go_to_the_next_mcq_s">Insturctions: This quiz contains 10 mcsq\'s. You have to attempt these. You can finish at any time. Click on \"Next\" Button to go to the next mcq\'s</string>
    <string name="welcome">  WELCOME </string>
</resources>