<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A0B0B"
    android:id="@+id/drawer1"
    tools:context=".calculator">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#009688"
        tools:context=".calculator">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1756F5"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="#CDDC39" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="343dp"
            android:layout_height="74dp"
            android:layout_marginTop="38dp"
            android:background="#4E070707"
            android:textAlignment="viewEnd"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="RtlCompat" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="368dp"
            android:layout_height="486dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:columnCount="6"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="0"

                android:layout_column="0"
                android:background="#F44336"
                android:fontFamily="sans-serif"
                android:onClick="clearResult"
                android:text="@string/c"
                android:textColor="#0E0E0E"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="0"
                android:layout_column="1"
                android:background="#AA2828"
                android:fontFamily="sans-serif"
                android:onClick="delPressed"
                android:text="@string/del"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="0"
                android:layout_column="2"
                android:background="#0C185A"
                android:fontFamily="sans-serif"
                android:onClick="modulusPressed"
                android:text="@string/mod"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="0"
                android:layout_column="3"
                android:background="#0C185A"
                android:fontFamily="sans-serif"
                android:onClick="divisionPressed"
                android:text="@string/div"
                android:textColor="#090909"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="1"
                android:layout_column="0"
                android:background="#AC9292"
                android:fontFamily="sans-serif"
                android:onClick="sevenPressed"
                android:text="@string/_7"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="1"
                android:layout_column="1"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="eightPressed"
                android:text="@string/_8"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="1"
                android:layout_column="2"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="ninePressed"
                android:text="@string/_9"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="1"
                android:layout_column="3"
                android:background="#0C185A"
                android:fontFamily="sans-serif"
                android:onClick="multiplyPressed"
                android:text="@string/multiply"
                android:textColor="#090909"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="2"
                android:layout_column="0"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="fourPressed"
                android:text="@string/_4"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="2"
                android:layout_column="1"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="fivePressed"
                android:text="@string/_5"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="2"
                android:layout_column="2"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="sixPressed"
                android:text="@string/_6"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="2"
                android:layout_column="3"
                android:background="#0C185A"
                android:fontFamily="sans-serif"
                android:onClick="minusPressed"
                android:text="@string/minus"
                android:textColor="#090909"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="3"
                android:layout_column="0"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="onePressed"
                android:text="@string/_1"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="3"
                android:layout_column="1"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="twoPressed"
                android:text="@string/_2"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="3"
                android:layout_column="2"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="threePressed"
                android:text="@string/_3"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="3"
                android:layout_column="3"
                android:background="#0C185A"
                android:fontFamily="sans-serif"
                android:onClick="plusPressed"
                android:text="@string/plus"
                android:textColor="#090909"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="4"
                android:layout_column="0"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="zeroPressed"
                android:text="@string/_0"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="4"
                android:layout_column="1"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="dotPressed"
                android:text="@string/dot"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnBracket"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="4"
                android:layout_column="2"
                android:background="#755D5D"
                android:fontFamily="sans-serif"
                android:onClick="doubleZeroPressed"
                android:text="@string/_00"
                android:textColor="#090909"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_row="4"
                android:layout_column="3"
                android:background="#DA2013"
                android:fontFamily="sans-serif"
                android:onClick="equalPressed"
                android:text="@string/equal"
                android:textColor="#090909"
                android:textSize="25sp" />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        tools:ignore="MissingConstraints" />

</androidx.drawerlayout.widget.DrawerLayout>